--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   </head>
   <body>
     <div class="name">МЕЛЕШКО МАКСИМ</div>
-
+<div class="block">
+  <div class="block-title">Профессионально ловлю рыбу и баги</div>
 
     <div class="block">
       <div class="block-title">буду рад тебе:</div>
